CPG-DEV/src/objects/StrategicObjective__c.object
<CustomObject>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>AccountPlan__c</referenceTo>
        <relationshipLabel>Strategic Objectives</relationshipLabel>
        <relationshipName>Strategic_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerGoals__c</fullName>
        <label>Customer Goals</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CustomerProfile__c</fullName>
        <label>Customer Profile</label>
        <referenceTo>CustomerProfile__c</referenceTo>
        <relationshipLabel>Strategic Objectives</relationshipLabel>
        <relationshipName>Strategic_Objectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_Objectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
  StartDate__c &gt; TODAY(),
       &quot;Pending&quot;,
       IF(EndDate__c &gt; TODAY(),
       &quot;Active&quot;,
       &quot;Expired&quot;
  ))</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Strategic Objective</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Strategic Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategic Objectives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RestrictStrategicObjectiveNameUpdate</fullName>
        <active>true</active>
        <description>Strategic Objective Name cannot be updated. It can be editable only at the time of creation.</description>
        <errorConditionFormula>AND( 
NOT(ISNEW()), 
ISCHANGED(Name), 
$Profile.Name &lt;&gt; &apos;System Administrator&apos; 
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Strategic Objective Name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>